--- a/notebooks/Improving_NER.ipynb
+++ b/notebooks/Improving_NER.ipynb
@@ -9,17 +9,18 @@
     "import random\n",
     "import scispacy\n",
     "import spacy\n",
-    "from spacy.util import minibatch, compounding"
+    "from spacy.util import minibatch, compounding\n",
+    "from spacy.language import Language"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sci_md = spacy.load(\"en_core_sci_md\")\n",
-    "bc5cdr_md = spacy.load(\"en_ner_bc5cdr_md\")"
+    "sci_md = spacy.load(\"/tmp/models/en_core_sci_md-0.1.0/en_core_sci_md/en_core_sci_md-0.1.0\")\n",
+    "bc5cdr_md = spacy.load(\"/tmp/models/en_ner_bc5cdr_md-0.1.0/en_ner_bc5cdr_md/en_ner_bc5cdr_md-0.1.0\")"
    ]
   },
   {
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -134,13 +135,13 @@
     }
    ],
    "source": [
-    "for e in bc5cdr_md(ex).ents:\n",
+    "for e in bc5cdr_md(disease_example).ents:\n",
     "    print(f\"Entity: {e}, Type: {e.label_}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,48 +241,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded model 'en_ner_bc5cdr_md'\n",
-      "Losses {'ner': 0.8454384974620552}\n",
-      "Losses {'ner': 0.385314792574988}\n",
-      "Losses {'ner': 0.5399651919922519}\n",
-      "Losses {'ner': 0.2570128394477251}\n",
-      "Losses {'ner': 0.378256326586893}\n",
-      "Losses {'ner': 0.3586510879928171}\n",
-      "Losses {'ner': 0.38361437361693973}\n",
-      "Losses {'ner': 0.191253353307701}\n",
-      "Losses {'ner': 0.13965390297429892}\n",
-      "Losses {'ner': 0.12434880842778817}\n",
-      "Losses {'ner': 0.10790991698104335}\n",
-      "Losses {'ner': 0.08566965487705147}\n",
-      "Losses {'ner': 0.0003826016052426162}\n",
-      "Losses {'ner': 0.1224545607597527}\n",
-      "Losses {'ner': 0.032198435193041997}\n",
-      "Losses {'ner': 0.0008169388996828175}\n",
-      "Losses {'ner': 1.6264684910838323e-05}\n",
-      "Losses {'ner': 0.002110830625653601}\n",
-      "Losses {'ner': 2.6197402835548657e-05}\n",
-      "Losses {'ner': 0.03530177439518655}\n",
+      "Loaded model '/tmp/models/en_ner_bc5cdr_md-0.1.0/en_ner_bc5cdr_md/en_ner_bc5cdr_md-0.1.0'\n",
+      "Losses {'ner': 0.5662824450549966}\n",
+      "Losses {'ner': 0.32617443837875726}\n",
+      "Losses {'ner': 0.6022752265740223}\n",
+      "Losses {'ner': 0.5373990733354503}\n",
+      "Losses {'ner': 0.22481859783047042}\n",
+      "Losses {'ner': 0.2763927944281739}\n",
+      "Losses {'ner': 0.24665489221448134}\n",
+      "Losses {'ner': 0.28134354241865367}\n",
+      "Losses {'ner': 0.2430362636528165}\n",
+      "Losses {'ner': 0.04465360517888302}\n",
+      "Losses {'ner': 0.46627512734144716}\n",
+      "Losses {'ner': 0.12436706719088875}\n",
+      "Losses {'ner': 0.14690013916019407}\n",
+      "Losses {'ner': 0.2399051309121205}\n",
+      "Losses {'ner': 0.22817193771705652}\n",
+      "Losses {'ner': 0.13688517401046693}\n",
+      "Losses {'ner': 0.0014477830514119609}\n",
+      "Losses {'ner': 1.767926242879532e-05}\n",
+      "Losses {'ner': 2.5376316897503595e-07}\n",
+      "Losses {'ner': 7.780083851327557e-07}\n",
+      "Entities [('Nexium', 'CHEMICAL')]\n",
       "Entities [('Plavix', 'CHEMICAL')]\n",
       "Entities [('Abnormal echocardiogram', 'DISEASE')]\n",
-      "Entities [('Nexium', 'CHEMICAL')]\n",
       "Entities [('Zocor', 'CHEMICAL')]\n"
      ]
     }
    ],
    "source": [
-    "bc5cdr_md_trained = train(\"en_ner_bc5cdr_md\", n_iter=20)"
+    "bc5cdr_md_trained = train(\"/tmp/models/en_ner_bc5cdr_md-0.1.0/en_ner_bc5cdr_md/en_ner_bc5cdr_md-0.1.0\", n_iter=20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -292,8 +293,7 @@
       "Entity: Metoprolol, Type: CHEMICAL\n",
       "Entity: bradycardia, Type: DISEASE\n",
       "Entity: Nexium, Type: CHEMICAL\n",
-      "Entity: Zocor, Type: CHEMICAL\n",
-      "Entity: Plavix, Type: CHEMICAL\n"
+      "Entity: Zocor, Type: CHEMICAL\n"
      ]
     }
    ],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
