wrote spacy functions to categorize notes and clinical entities

--- a/notebooks/Improving_NER.ipynb
+++ b/notebooks/Improving_NER.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,22 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/anishdalal/code/product_analytics/product-analytics-group-project-armor/notebooks'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "os.path.abspath(os.getcwd())"
+    "par_dir = os.path.abspath(os.path.join(os.getcwd(), os.pardir))"
    ]
   },
   {
@@ -40,22 +29,27 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "OSError",
-     "evalue": "[E050] Can't find model '../models/en_core_sci_md-0.1.0/en_core_sci_md/en_core_sci_md-0.1.0'. It doesn't seem to be a shortcut link, a Python package or a valid path to a data directory.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-90f5700cdbae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msci_md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mspacy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../models/en_core_sci_md-0.1.0/en_core_sci_md/en_core_sci_md-0.1.0\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mbc5cdr_md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mspacy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../models/en_ner_bc5cdr_md-0.1.0/en_ner_bc5cdr_md/en_ner_bc5cdr_md-0.1.0\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/MSDS603/lib/python3.7/site-packages/spacy/__init__.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(name, **overrides)\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mdepr_path\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mdeprecation_warning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mWarnings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mW001\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdepr_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0moverrides\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/MSDS603/lib/python3.7/site-packages/spacy/util.py\u001b[0m in \u001b[0;36mload_model\u001b[0;34m(name, **overrides)\u001b[0m\n\u001b[1;32m    117\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'exists'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# Path or Path-like to model data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    118\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mload_model_from_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0moverrides\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 119\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mIOError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mErrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mE050\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    120\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    121\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mOSError\u001b[0m: [E050] Can't find model '../models/en_core_sci_md-0.1.0/en_core_sci_md/en_core_sci_md-0.1.0'. It doesn't seem to be a shortcut link, a Python package or a valid path to a data directory."
-     ]
+     "data": {
+      "text/plain": [
+       "'/Users/anishdalal/code/product_analytics/product-analytics-group-project-armor'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "sci_md = spacy.load(\"/tmp/models/en_core_sci_md-0.1.0/en_core_sci_md/en_core_sci_md-0.1.0\")\n",
-    "bc5cdr_md = spacy.load(\"/tmp/models/en_ner_bc5cdr_md-0.1.0/en_ner_bc5cdr_md/en_ner_bc5cdr_md-0.1.0\")"
+    "par_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bc5cdr_md = spacy.load(\"{}/models/en_ner_bc5cdr_md-0.1.0\".format(par_dir))"
    ]
   },
   {
@@ -67,84 +61,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "disease_example = \"Abnormal echocardiogram findings and followup. \\\n",
+    "Shortness of breath, congestive heart failure, and valvular insufficiency.\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "disease_example = \"Abnormal echocardiogram findings and followup. Shortness of breath, congestive heart failure, and valvular insufficiency.\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drug_example = \"Aspirin 325 mg once a day. Metoprolol 50 mg once a day, but we have had to hold it because of relative bradycardia which he apparently has a history of. Nexium 40 mg once a day. Zocor 40 mg once a day, and there is a fasting lipid profile pending at the time of this dictation. I see that his LDL was 136 on May 3, 2002. Plavix 600 mg p.o. x1 which I am giving him tonight\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Sci_md NER "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Abnormal\n",
-      "echocardiogram\n",
-      "findings\n",
-      "followup\n",
-      "Shortness of breath\n",
-      "congestive heart failure\n",
-      "valvular insufficiency\n"
-     ]
-    }
-   ],
-   "source": [
-    "for e in sci_md(disease_example).ents:\n",
-    "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Aspirin\n",
-      "day\n",
-      "Metoprolol\n",
-      "day\n",
-      "relative bradycardia\n",
-      "history of\n",
-      "Nexium\n",
-      "day\n",
-      "Zocor\n",
-      "day\n",
-      "fasting\n",
-      "lipid profile\n",
-      "dictation\n",
-      "LDL\n",
-      "Plavix\n",
-      "x1\n"
-     ]
-    }
-   ],
-   "source": [
-    "for e in sci_md(drug_example).ents:\n",
-    "    print(e)"
+    "drug_example = \"Aspirin 325 mg once a day. Metoprolol 50 mg once a day, \\\n",
+    "but we have had to hold it because of relative bradycardia which he apparently has a history of. \\\n",
+    "Nexium 40 mg once a day. Zocor 40 mg once a day, and there is a fasting \\\n",
+    "lipid profile pending at the time of this dictation. I see that \\\n",
+    "his LDL was 136 on May 3, 2002. Plavix 600 mg p.o. x1 which I am giving him tonight\"\n"
    ]
   },
   {
@@ -156,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -204,13 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "TRAIN_DATA = [\n",
     "    (\"Nexium 40 mg once a day.\", {\"entities\": [(0, 6, \"CHEMICAL\")]}),\n",
-    "    (\"Zocor 40 mg once a day, and there is a fasting lipid profile pending at the time of this dictation. I see that his LDL was 136 on May 3, 2002.\", {\"entities\": [(0, 5, \"CHEMICAL\")]}),\n",
+    "    (\"Zocor 40 mg once a day, and there is a fasting lipid profile pending at the time of this dictation. I see that his LDL was 136 on May 3, 2002.\", \n",
+    "     {\"entities\": [(0, 5, \"CHEMICAL\")]}),\n",
     "    (\"Plavix 600 mg p.o. x1 which I am giving him tonight.\", {\"entities\": [(0, 6, \"CHEMICAL\")]}),\n",
     "    (\"Abnormal echocardiogram findings and followup,\", {\"entities\": [(0, 23, \"DISEASE\")]})\n",
     "]"
@@ -218,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,48 +212,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded model '/tmp/models/en_ner_bc5cdr_md-0.1.0/en_ner_bc5cdr_md/en_ner_bc5cdr_md-0.1.0'\n",
-      "Losses {'ner': 0.5662824450549966}\n",
-      "Losses {'ner': 0.32617443837875726}\n",
-      "Losses {'ner': 0.6022752265740223}\n",
-      "Losses {'ner': 0.5373990733354503}\n",
-      "Losses {'ner': 0.22481859783047042}\n",
-      "Losses {'ner': 0.2763927944281739}\n",
-      "Losses {'ner': 0.24665489221448134}\n",
-      "Losses {'ner': 0.28134354241865367}\n",
-      "Losses {'ner': 0.2430362636528165}\n",
-      "Losses {'ner': 0.04465360517888302}\n",
-      "Losses {'ner': 0.46627512734144716}\n",
-      "Losses {'ner': 0.12436706719088875}\n",
-      "Losses {'ner': 0.14690013916019407}\n",
-      "Losses {'ner': 0.2399051309121205}\n",
-      "Losses {'ner': 0.22817193771705652}\n",
-      "Losses {'ner': 0.13688517401046693}\n",
-      "Losses {'ner': 0.0014477830514119609}\n",
-      "Losses {'ner': 1.767926242879532e-05}\n",
-      "Losses {'ner': 2.5376316897503595e-07}\n",
-      "Losses {'ner': 7.780083851327557e-07}\n",
-      "Entities [('Nexium', 'CHEMICAL')]\n",
-      "Entities [('Plavix', 'CHEMICAL')]\n",
+      "Loaded model '/Users/anishdalal/code/product_analytics/product-analytics-group-project-armor/models/en_ner_bc5cdr_md-0.1.0'\n",
+      "Losses {'ner': 0.6595967436049608}\n",
+      "Losses {'ner': 0.42597838775063224}\n",
+      "Losses {'ner': 0.5521093332604323}\n",
+      "Losses {'ner': 0.44600275475264084}\n",
+      "Losses {'ner': 0.31307983600967637}\n",
+      "Losses {'ner': 0.43369881816274614}\n",
+      "Losses {'ner': 0.24680072141518394}\n",
+      "Losses {'ner': 0.11241393547733813}\n",
+      "Losses {'ner': 0.11397331915926345}\n",
+      "Losses {'ner': 0.14974837926238038}\n",
+      "Losses {'ner': 0.11977514771461273}\n",
+      "Losses {'ner': 0.003662050364525271}\n",
+      "Losses {'ner': 0.03619129565891743}\n",
+      "Losses {'ner': 0.12473923715495694}\n",
+      "Losses {'ner': 0.0838228054348189}\n",
+      "Losses {'ner': 0.05893670279328861}\n",
+      "Losses {'ner': 0.000896163900904412}\n",
+      "Losses {'ner': 0.012129870794346687}\n",
+      "Losses {'ner': 0.11201299529095587}\n",
+      "Losses {'ner': 0.0001747447892229382}\n",
       "Entities [('Abnormal echocardiogram', 'DISEASE')]\n",
+      "Entities [('Plavix', 'CHEMICAL')]\n",
+      "Entities [('Nexium', 'CHEMICAL')]\n",
       "Entities [('Zocor', 'CHEMICAL')]\n"
      ]
     }
    ],
    "source": [
-    "bc5cdr_md_trained = train(\"/tmp/models/en_ner_bc5cdr_md-0.1.0/en_ner_bc5cdr_md/en_ner_bc5cdr_md-0.1.0\", n_iter=20)"
+    "model_dir = \"{}/models/en_ner_bc5cdr_md-0.1.0\".format(par_dir)\n",
+    "bc5cdr_md = train(model_dir, n_iter=20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -333,13 +270,13 @@
     }
    ],
    "source": [
-    "for e in bc5cdr_md_trained(drug_example).ents:\n",
+    "for e in bc5cdr_md(drug_example).ents:\n",
     "    print(f\"Entity: {e}, Type: {e.label_}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -354,16 +291,9 @@
     }
    ],
    "source": [
-    "for e in bc5cdr_md_trained(disease_example).ents:\n",
+    "for e in bc5cdr_md(disease_example).ents:\n",
     "    print(f\"Entity: {e}, Type: {e.label_}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
