--- a/notebooks/Processing_Notes.ipynb
+++ b/notebooks/Processing_Notes.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -179,58 +179,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = doc[6: 146]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The patient is a 41-year-old African-American male previously well known to me. \\nHe has a previous history of aortic valve disease, status post aortic valve replacement on 10/15/2007, \\nfor which he has been on chronic anticoagulation. There is a previous history of paroxysmal atrial fibrillation \\nand congestive heart failure, both of which have been stable prior to this admission. He has a previous history \\nof transient ischemic attack with no residual neurologic deficits.\\n\\nThe patient has undergone surgery by Dr. X for attempted nephrolithotomy. The patient has experienced \\nsignificant postoperative bleeding, for which it has been necessary to discontinue all anticoagulation. \\nThe patient is presently seen at the request of Dr. X for management of anticoagulation and his above heart disease.\\n\\n'"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sys.path.append(\"../code\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nlp import prepare_note"
+    "a = doc[6: 146]"
    ]
   },
   {
@@ -241,31 +194,91 @@
     {
      "data": {
       "text/plain": [
-       "{history of present illness: {'text': 'The patient is a 41-year-old African-American male previously well known to me. \\nHe has a previous history of aortic valve disease, status post aortic valve replacement on 10/15/2007, \\nfor which he has been on chronic anticoagulation. There is a previous history of paroxysmal atrial fibrillation \\nand congestive heart failure, both of which have been stable prior to this admission. He has a previous history \\nof transient ischemic attack with no residual neurologic deficits.\\n\\nThe patient has undergone surgery by Dr. X for attempted nephrolithotomy. The patient has experienced \\nsignificant postoperative bleeding, for which it has been necessary to discontinue all anticoagulation. \\nThe patient is presently seen at the request of Dr. X for management of anticoagulation and his above heart disease.\\n\\nPAST MEDICAL AND SURGICAL HISTORY:\\n1. Type I diabetes mellitus.\\n2. Hyperlipidemia.\\n3. Hypertension.\\n4. Morbid obesity.\\n5. Sleep apnea syndrome.\\n6. Status post thyroidectomy for thyroid carcinoma.\\n\\nREVIEW',\n",
+       "'The patient is a 41-year-old African-American male previously well known to me. \\nHe has a previous history of aortic valve disease, status post aortic valve replacement on 10/15/2007, \\nfor which he has been on chronic anticoagulation. There is a previous history of paroxysmal atrial fibrillation \\nand congestive heart failure, both of which have been stable prior to this admission. He has a previous history \\nof transient ischemic attack with no residual neurologic deficits.\\n\\nThe patient has undergone surgery by Dr. X for attempted nephrolithotomy. The patient has experienced \\nsignificant postoperative bleeding, for which it has been necessary to discontinue all anticoagulation. \\nThe patient is presently seen at the request of Dr. X for management of anticoagulation and his above heart disease.\\n\\n'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.append(\"../code\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nlp import prepare_note"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "note = prepare_note(bc5cdr_md, example_note)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history of present illness': {'text': 'The patient is a 41-year-old African-American male previously well known to me. \\nHe has a previous history of aortic valve disease, status post aortic valve replacement on 10/15/2007, \\nfor which he has been on chronic anticoagulation. There is a previous history of paroxysmal atrial fibrillation \\nand congestive heart failure, both of which have been stable prior to this admission. He has a previous history \\nof transient ischemic attack with no residual neurologic deficits.\\n\\nThe patient has undergone surgery by Dr. X for attempted nephrolithotomy. The patient has experienced \\nsignificant postoperative bleeding, for which it has been necessary to discontinue all anticoagulation. \\nThe patient is presently seen at the request of Dr. X for management of anticoagulation and his above heart disease.\\n\\n',\n",
        "  'diseases': [{'name': aortic valve disease},\n",
        "   {'name': atrial fibrillation},\n",
        "   {'name': congestive heart failure},\n",
        "   {'name': postoperative bleeding},\n",
-       "   {'name': heart disease},\n",
-       "   {'name': diabetes mellitus},\n",
+       "   {'name': heart disease}],\n",
+       "  'medications': []},\n",
+       " 'past medical and surgical history': {'text': '\\n1. Type I diabetes mellitus.\\n2. Hyperlipidemia.\\n3. Hypertension.\\n4. Morbid obesity.\\n5. Sleep apnea syndrome.\\n6. Status post thyroidectomy for thyroid carcinoma.\\n\\n',\n",
+       "  'diseases': [{'name': diabetes mellitus},\n",
        "   {'name': Hyperlipidemia},\n",
        "   {'name': Hypertension},\n",
        "   {'name': obesity},\n",
        "   {'name': Sleep apnea syndrome},\n",
        "   {'name': thyroid carcinoma}],\n",
        "  'medications': []},\n",
-       " review of systems: {'text': ': Unremarkable.\\nCardiopulmonary: No chest pain, shortness of breath, palpitations, or dizziness.\\nGastrointestinal: Unremarkable.\\nGenitourinary: See above.\\nMusculoskeletal: Unremarkable.\\nNeurologic: Unremarkable.\\n\\nFAMILY HISTORY: There are no family members with coronary artery disease. His mother has congestive heart failure.\\n\\nSOCIAL',\n",
+       " 'review of systems': {'text': '\\nGeneral: Unremarkable.\\nCardiopulmonary: No chest pain, shortness of breath, palpitations, or dizziness.\\nGastrointestinal: Unremarkable.\\nGenitourinary: See above.\\nMusculoskeletal: Unremarkable.\\nNeurologic: Unremarkable.\\n\\n',\n",
        "  'diseases': [{'name': chest pain},\n",
        "   {'name': shortness of breath},\n",
        "   {'name': palpitations},\n",
-       "   {'name': dizziness},\n",
-       "   {'name': coronary artery disease},\n",
+       "   {'name': dizziness}],\n",
+       "  'medications': []},\n",
+       " 'family history': {'text': 'There are no family members with coronary artery disease. His mother has congestive heart failure.\\n\\n',\n",
+       "  'diseases': [{'name': coronary artery disease},\n",
        "   {'name': congestive heart failure}],\n",
        "  'medications': []},\n",
-       " social history: {'text': 'is married. He lives with his wife. He is employed as a barber. He does not use alcohol, tobacco, or illicit drugs.\\n\\nMEDICATIONS',\n",
+       " 'social history': {'text': 'The patient is married. He lives with his wife. He is employed as a barber. He does not use alcohol, tobacco, or illicit drugs.\\n\\n',\n",
        "  'diseases': [],\n",
        "  'medications': [{'name': alcohol}]},\n",
-       " medications prior to admission: {'text': '. Clonidine 0.3 mg b.i.d.\\n2. Atenolol 50 mg daily.\\n3. Simvastatin 80 mg daily.\\n4. Furosemide 40 mg daily.\\n5. Metformin 1000 mg b.i.d.\\n6. Hydralazine 25 mg t.i.d.\\n7. Diovan 320 mg daily.\\n8. Lisinopril 40 mg daily.\\n9. Amlodipine 10 mg daily.\\n10. Lantus insulin 50 units q.p.m.\\n11. KCl 20 mEq daily.\\n12. NovoLog sliding scale insulin coverage.\\n13. Warfarin 7.5 mg daily.\\n14. Levothyroxine 0.2 mg daily.\\n15. Folic acid 1 mg daily.\\n\\nALLERGIES',\n",
+       " 'medications prior to admission': {'text': '\\n1. Clonidine 0.3 mg b.i.d.\\n2. Atenolol 50 mg daily.\\n3. Simvastatin 80 mg daily.\\n4. Furosemide 40 mg daily.\\n5. Metformin 1000 mg b.i.d.\\n6. Hydralazine 25 mg t.i.d.\\n7. Diovan 320 mg daily.\\n8. Lisinopril 40 mg daily.\\n9. Amlodipine 10 mg daily.\\n10. Lantus insulin 50 units q.p.m.\\n11. KCl 20 mEq daily.\\n12. NovoLog sliding scale insulin coverage.\\n13. Warfarin 7.5 mg daily.\\n14. Levothyroxine 0.2 mg daily.\\n15. Folic acid 1 mg daily.\\n\\n',\n",
        "  'diseases': [],\n",
        "  'medications': [{'name': Clonidine},\n",
        "   {'name': b.i.d},\n",
@@ -281,19 +294,19 @@
        "   {'name': Warfarin},\n",
        "   {'name': Levothyroxine},\n",
        "   {'name': Folic acid}]},\n",
-       " allergies: {'text': '\\n\\nPHYSICAL', 'diseases': [], 'medications': []},\n",
-       " physical examination: {'text': ': A well-appearing, obese black male.\\nVital Signs: BP 140/80, HR 88, respirations 16, and afebrile.\\nHEENT: Grossly normal.\\nNeck: Normal. Thyroid, normal. Carotid, normal upstroke, no bruits.\\nChest: Midline sternotomy scar.\\nLungs: Clear.\\nHeart: PMI fifth intercostal space mid clavicular line. Normal S1 and prosthetic S2. No murmur, rub, gallop, or click.\\nAbdomen: Soft and nontender. No palpable mass or hepatosplenomegaly.\\nExtremities: Normal. No edema. Pulses bilaterally intact, carotid, radial, femoral, and dorsalis pedis.\\nNeurologic: Mental status, no gross cranial nerve, motor, or sensory deficits.\\n\\nELECTROCARDIOGRAM',\n",
+       " 'allergies': {'text': 'None.\\n\\n', 'diseases': [], 'medications': []},\n",
+       " 'physical examination': {'text': '\\nGeneral: A well-appearing, obese black male.\\nVital Signs: BP 140/80, HR 88, respirations 16, and afebrile.\\nHEENT: Grossly normal.\\nNeck: Normal. Thyroid, normal. Carotid, normal upstroke, no bruits.\\nChest: Midline sternotomy scar.\\nLungs: Clear.\\nHeart: PMI fifth intercostal space mid clavicular line. Normal S1 and prosthetic S2. No murmur, rub, gallop, or click.\\nAbdomen: Soft and nontender. No palpable mass or hepatosplenomegaly.\\nExtremities: Normal. No edema. Pulses bilaterally intact, carotid, radial, femoral, and dorsalis pedis.\\nNeurologic: Mental status, no gross cranial nerve, motor, or sensory deficits.\\n\\n',\n",
        "  'diseases': [{'name': afebrile},\n",
        "   {'name': gallop},\n",
        "   {'name': hepatosplenomegaly},\n",
        "   {'name': edema}],\n",
        "  'medications': [{'name': Midline}]},\n",
-       " electrocardiogram: {'text': 'rhythm. Right bundle-branch block. Findings compatible with old anteroseptal and lateral wall myocardial infarction.\\n_______ nonspecific ST-T abnormality.\\n\\nIMPRESSION',\n",
+       " 'electrocardiogram': {'text': 'Normal sinus rhythm. Right bundle-branch block. Findings compatible with old anteroseptal and lateral wall myocardial infarction.\\n_______ nonspecific ST-T abnormality.\\n\\n',\n",
        "  'diseases': [{'name': Right bundle-branch block},\n",
        "   {'name': myocardial infarction}],\n",
        "  'medications': [{'name': \n",
        "    _______ nonspecific ST-T}]},\n",
-       " impression: {'text': '. Status post nephrolithotomy with postoperative hematuria.\\n2. Aortic valve disease, status post aortic valve replacement on 10/15/2007.\\n3. Congestive heart failure, diastolic, chronic, stable, NYSHA class I to II.\\n4. Paroxysmal atrial fibrillation.\\n5. Status post remote transient ischemic attack with no residual neurologic deficits.\\n6. Type I diabetes mellitus.\\n7. Hyperlipidemia.\\n8. Hypertension.\\n9. Morbid obesity.\\n10. Sleep apnea syndrome.\\n11. Chronic therapeutic anticoagulation.\\n\\nRECOMMENDATIONS',\n",
+       " 'impression': {'text': '\\n1. Status post nephrolithotomy with postoperative hematuria.\\n2. Aortic valve disease, status post aortic valve replacement on 10/15/2007.\\n3. Congestive heart failure, diastolic, chronic, stable, NYSHA class I to II.\\n4. Paroxysmal atrial fibrillation.\\n5. Status post remote transient ischemic attack with no residual neurologic deficits.\\n6. Type I diabetes mellitus.\\n7. Hyperlipidemia.\\n8. Hypertension.\\n9. Morbid obesity.\\n10. Sleep apnea syndrome.\\n11. Chronic therapeutic anticoagulation.\\n\\n',\n",
        "  'diseases': [{'name': postoperative hematuria},\n",
        "   {'name': valve disease},\n",
        "   {'name': Congestive heart failure},\n",
@@ -305,20 +318,38 @@
        "   {'name': obesity},\n",
        "   {'name': Sleep apnea syndrome}],\n",
        "  'medications': [{'name': NYSHA}]},\n",
-       " recommendations: {'text': 'of the hematuria, I agree with the necessity of discontinuation of all anticoagulation. There is obvious risk both due to prosthetic aortic valve and paroxysmal atrial fibrillation with continuation of anticoagulation; however, the risk of uncontrolled bleeding is essentially worse.\\nContinue other medications. \\n',\n",
+       " 'recommendations': {'text': 'Until resolution of the hematuria, I agree with the necessity of discontinuation of all anticoagulation. There is obvious risk both due to prosthetic aortic valve and paroxysmal atrial fibrillation with continuation of anticoagulation; however, the risk of uncontrolled bleeding is essentially worse.\\nContinue other medications. \\n',\n",
        "  'diseases': [{'name': hematuria},\n",
        "   {'name': atrial fibrillation},\n",
        "   {'name': bleeding}],\n",
        "  'medications': []}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prepare_note(bc5cdr_md, example_note)"
+    "note"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = note.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k"
    ]
   },
   {
